@@ -86,7 +86,7 @@
   </team>
   <team id="br">
     <_language id="br">Breton</_language>
-    <coordinator id="x-jeremyarfloch"/>
+    <coordinator id="jeremylf"/>
     <webpage>http://www.stationlinux.org/gnomebr/</webpage>
   </team>
   <team id="bg">
@@ -159,7 +159,7 @@
   </team>
   <team id="eo">
     <_language id="eo">Esperanto</_language>
-    <coordinator id="x-guillaumesavaton"/>
+    <coordinator id="gsavaton"/>
   </team>
   <team id="et">
     <_language id="et">Estonian</_language>
@@ -249,7 +249,7 @@
   </team>
   <team id="io">
     <_language id="io">Ido</_language>
-    <coordinator id="x-mterry"/>
+    <coordinator id="mterry"/>
     <mailing-list>gnome-ido@lists.mterry.name</mailing-list>
     <mailing-list-subscribe>http://lists.mterry.name/listinfo.cgi/gnome-ido-mterry.name</mailing-list-subscribe>
   </team>
@@ -313,7 +313,7 @@
   </team>
   <team id="lv">
     <_language id="lv">Latvian</_language>
-    <coordinator id="x-raivisdejus"/>
+    <coordinator id="rdejus"/>
     <webpage>http://ll10nt.laka.lv/</webpage>
   </team>
   <team id="li">
@@ -341,6 +341,7 @@
   <team id="mai">
     <_language id="mai">Maithili</_language>
     <coordinator id="x-rajeshranjan"/>
+    <!-- Is this the same person as rranjan? /menthos -->
   </team>
   <team id="mg">
     <_language id="mg">Malagasy</_language>
@@ -492,7 +493,7 @@
   </team>
   <team id="tl">
     <_language id="tl">Tagalog</_language>
-    <coordinator id="x-ericpareja"/>
+    <coordinator id="epareja"/>
   </team>
   <team id="tg">
     <_language id="tg">Tajik</_language>
@@ -529,12 +530,12 @@
   </team>
   <team id="tk">
     <_language id="tk">Turkmen</_language>
-    <coordinator id="x-ghorbanmtavakoly"/>
+    <coordinator id="ghomota"/>
     <webpage>http://kakilik.sourceforge.net/</webpage>
   </team>
   <team id="ug">
     <_language id="ug">Uighur</_language>
-    <coordinator id="x-abdurixitabduxukur"/>
+    <coordinator id="aabdurix"/>
     <webpage>http://groups.yahoo.com/group/gnome-uighur/</webpage>
   </team>
   <team id="uk">
