@@ -1,5 +1,10 @@
 2008-10-06  Christian Rose  <menthos@gnome.org>
 
+	* translation-teams.xml.in: Cleaned up coordinator id information
+	for a lot of teams, including br, eo, io, lv, tl, tk, and ug.
+
+2008-10-06  Christian Rose  <menthos@gnome.org>
+
 	* translation-teams.xml.in: Updated web page for Swedish team.
 
 2008-10-06  Gil Forcada  <gforcada@gnome.org>
